--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,10 +30,16 @@
   box-shadow: none !important;
 }
 
+.nowrap {
+  width: 1px;
+  white-space: nowrap;
+}
+
 .table {
   color: #eee;
 }
 .table th, .table td {
+  vertical-align: middle;
   border-color: rgba(255, 255, 255, 0.15);
 }
 
@@ -72,8 +78,9 @@ body nav#navigation a {
   color: inherit;
   text-decoration: none;
 }
-body nav#navigation .buttons a {
-  margin: 1rem;
+body nav#navigation .buttons > * {
+  margin: 0 1rem;
+  display: inline-block;
 }
 body nav#navigation .js-sidenav-toggle {
   display: none;
@@ -125,6 +132,9 @@ body main#content {
   padding-right: 1.5rem;
   overflow: hidden;
 }
+body main#content h1, body main#content h2, body main#content h3 {
+  font-weight: 200;
+}
 body main#content > .parent {
   -webkit-margin-after: 1rem;
           margin-block-end: 1rem;
@@ -136,9 +146,6 @@ body main#content > .parent > div {
 }
 body main#content > .parent > div > small {
   opacity: 0.7;
-}
-body main#content > .parent > div > h3 {
-  font-weight: 200;
 }
 body footer#footer {
   grid-area: footer;
