--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,10 +29,15 @@ $text: #eee;
         box-shadow: none !important;
     }
 }
+.nowrap {
+    width: 1px;
+    white-space: nowrap;
+}
 .table {
     color: $text;
     
     th, td {
+        vertical-align: middle;
         border-color: rgba(255, 255, 255, 0.15);
     }
 }
@@ -76,8 +81,9 @@ body {
             color: inherit;
             text-decoration: none;
         }
-        .buttons a {
-            margin: 1rem;
+        .buttons > * {
+            margin: 0 1rem;
+            display: inline-block;
         }
         .js-sidenav-toggle {
             display: none;
@@ -133,6 +139,10 @@ body {
         padding-right: 1.5rem;
         overflow: hidden;
 
+        h1, h2, h3 {
+            font-weight: 200;
+        }
+
         > .parent {
             margin-block-end: 1rem;
             > div {
@@ -142,9 +152,6 @@ body {
 
                 > small {
                     opacity: 0.7;
-                }
-                > h3 {
-                    font-weight: 200;
                 }
             }
         }
