--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@ $text: #eee;
     box-sizing: border-box;
 }
 
-.bg-primary {
+.bg-primary, .btn-primary {
     background-color: darken($primary, 10) !important;
     color: $text !important;
 
