--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,9 +69,13 @@ body::before {
   display: block;
   top: 0;
   left: 0;
-  width: 100%;
   background-color: #e60f00;
   height: 3px;
+  width: 0;
+  transition: width 1s ease-in-out;
+}
+body.loaded::before {
+  width: 100%;
 }
 body nav#navigation {
   grid-area: nav;
