--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -188,6 +188,10 @@ body {
 
         > .parent {
             margin-block-end: 1rem;
+
+            a {
+                color: var(--bs-heading-color,inherit);
+            }
             > div {
                 background-color: rgba(255, 255, 255, 0.08);
                 border-radius: .5rem;
@@ -215,17 +219,17 @@ body {
                     #e-links {
                         text-align: center;
                     }
-                    a {
-                        color: var(--bs-heading-color,inherit);
-                        padding-top: 1rem;
-                    }
                 }
 
                 div.list-event:hover {
                     background: $primary;
                     cursor: pointer;
                 }
+                a {
+                    text-decoration: none;
+                }
             }
+
         }
     }
     
