--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -230,6 +230,26 @@ body {
                 }
             }
 
+            .wishlist {
+                
+                a {
+                    text-decoration: none;
+                    background-color: $primary;
+                    padding: .5rem;
+                    border-radius: .5rem;
+                    display: inline-block;
+                    text-align: center;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    min-width: 7rem;
+                    transition: background-color, .2s;
+                }
+
+                a:hover {
+                    background-color: rgba(230,15,0,0.80);
+                }
+            }
         }
     }
     
