--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -189,7 +189,7 @@ body {
         > .parent {
             margin-block-end: 1rem;
 
-            a {
+            div#event-thumbnail a, a.wl-content {
                 color: var(--bs-heading-color,inherit);
             }
             > div {
