--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Monoton&display=swap");
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -297,6 +297,18 @@ body footer#footer {
 .square {
   height: 3em;
   aspect-ratio: 1/1;
+}
+
+.logo {
+  color: white;
+  font-weight: 200;
+  letter-spacing: 0.1em;
+  display: inline-block;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  font-family: "Monoton", sans-serif;
 }
 
 @media screen and (max-width: 768px) {
