--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Monoton&display=swap');
 
 $primary: #e60f00;
 $dark: darken($primary, 41%);
@@ -117,6 +117,7 @@ body {
     nav#navigation {
         grid-area: nav;
         padding: 2rem;
+
         svg {
             cursor: pointer;
         }
@@ -317,6 +318,14 @@ body {
 .square {
     height: 3em;
     aspect-ratio: 1 / 1;
+}
+.logo {
+    color: white;
+    font-weight: 200;
+    letter-spacing: .1em;
+    display: inline-block;
+    user-select: none;
+    font-family: 'Monoton', sans-serif;
 }
 
 @media screen and (max-width: 768px) {
