--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Monoton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo+Play:wght@500;900&display=swap');
 
 $primary: #e60f00;
 $dark: darken($primary, 41%);
@@ -326,7 +327,7 @@ body {
     letter-spacing: .1em;
     display: inline-block;
     user-select: none;
-    font-family: 'Monoton', sans-serif;
+    font-family: 'Cairo Play', cursive;
 }
 
 @media screen and (max-width: 768px) {
