--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -190,6 +190,10 @@ body main#content > .parent {
   -webkit-margin-after: 1rem;
           margin-block-end: 1rem;
 }
+body main#content > .parent div#geoloc button {
+  width: 100%;
+  height: 100%;
+}
 body main#content > .parent div#event-thumbnail a, body main#content > .parent a.wl-content {
   color: var(--bs-heading-color, inherit);
 }
