--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,10 @@
   margin-top: 0.3em;
 }
 
+.color-primary {
+  color: #e60f00 !important;
+}
+
 .nowrap {
   width: 1px;
   white-space: nowrap;
@@ -316,6 +320,53 @@ body footer#footer {
   font-family: "Cairo Play", cursive;
 }
 
+.headline {
+  padding: 5rem 0 10rem;
+  background-image: url("/assets/images/headline-illustration.png");
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position: center center;
+  box-shadow: inset 0 0 999rem 0 rgba(0, 0, 0, 0.5);
+  border-radius: 0.5rem;
+  border: 2px solid;
+  -o-border-image: linear-gradient(45deg, gold, deeppink) 1;
+     border-image: linear-gradient(45deg, gold, deeppink) 1;
+  -webkit-clip-path: inset(0px round 2px);
+          clip-path: inset(0px round 2px);
+  -webkit-animation: huerotate 6s infinite linear;
+          animation: huerotate 6s infinite linear;
+  filter: hue-rotate(360deg);
+  overflow: hidden;
+}
+.headline > div {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.9) !important;
+  padding: 3rem 0 15rem;
+  border-radius: 0 !important;
+  font-weight: 500;
+}
+.headline > div h1 {
+  font-weight: 600 !important;
+  letter-spacing: 1px;
+}
+
+@-webkit-keyframes huerotate {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rorate(360deg);
+  }
+}
+
+@keyframes huerotate {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rorate(360deg);
+  }
+}
 @media screen and (max-width: 768px) {
   body {
     grid-template-columns: 1fr;
