--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -67,6 +67,9 @@ $text: #eee;
     font-weight: 300;
     margin-top: .3em;
 }
+.color-primary {
+    color: $primary !important;
+}
 .nowrap {
     width: 1px;
     white-space: nowrap;
@@ -335,6 +338,45 @@ body {
     display: inline-block;
     user-select: none;
     font-family: 'Cairo Play', cursive;
+}
+
+.headline {
+    padding: 5rem 0 10rem;
+    background-image: url('/assets/images/headline-illustration.png');
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center center;
+    box-shadow: inset 0 0 999rem 0 rgba(0,0,0, .5);
+    border-radius: .5rem;
+
+    border: 2px solid;
+    border-image: linear-gradient(45deg, gold, deeppink) 1;
+    clip-path: inset(0px round 2px);
+    animation: huerotate 6s infinite linear;
+    filter: hue-rotate(360deg);
+    overflow: hidden;
+
+    > div {
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.9) !important;
+        padding: 3rem 0 15rem;
+        border-radius: 0 !important;
+        font-weight: 500;
+
+        h1 {
+            font-weight: 600 !important;
+            letter-spacing: 1px;
+        }
+    }
+}
+
+@keyframes huerotate {
+    0% {
+        filter: hue-rotate(0deg);
+    }
+    100% {
+        filter: hue-rorate(360deg);
+    }
 }
 
 @media screen and (max-width: 768px) {
