--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -336,6 +336,8 @@ body footer#footer {
   -webkit-animation: huerotate 6s infinite linear;
           animation: huerotate 6s infinite linear;
   filter: hue-rotate(360deg);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   overflow: hidden;
 }
 .headline > div {
